# flet-svg

./: README.md  main.py  mkdocs.yml  pyproject.toml
docs/: FletSvg.md  index.md
examples/flet_svg_example/: pyproject.toml
examples/flet_svg_example/src/: main.py
src/flet_svg/: __init__.py  flet_svg.py
src/flutter/flet_svg/: README.md  pubspec.yaml
src/flutter/flet_svg/lib/: flet_svg.dart
src/flutter/flet_svg/lib/src/: create_control.dart  flet_svg.dart
