[project]
name = "flet-svg"
version = "0.1.0"
description = "FletSvg control for Flet"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Atsushi Tatsuma", email = "yoshoku@outlook.com" }
]
dependencies = [
    "flet>=0.28.3",
]

[project.urls]
Homepage = "https://mydomain.dev"
Documentation = "https://github.com/MyGithubAccount/flet-svg"
Repository = "https://github.com/MyGithubAccount/flet-svg"
Issues = "https://github.com/MyGithubAccount/flet-svg/issues"

[tool.setuptools.package-data]
"flutter.flet_svg" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]"
]

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
mkdocs = "*"
mkdocstrings = { extras = ["python"], version = "*" }
mkdocs-material = "*"

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
